--- a/docs/java-advanced/design-patterns/单例模式.md
+++ b/docs/java-advanced/design-patterns/单例模式.md
@@ -228,6 +228,8 @@ public class Singleton {
 **经验之谈：**一般情况下，不建议使用第 1 种和第 2 种懒汉方式，建议使用第 3 种饿汉方式。只有在要明确实现 lazy loading 效果时，才会使用第 5 种登记方式。如果涉及到反序列化创建对象时，可以尝试使用第 6 种枚举方式。如果有其他特殊的需求，可以考虑使用第 4 种双检锁方式。
 
 
+[转载链接]()
 
-
+#### 其他相关文章
+* [面试中单例模式有几种写法？](https://monkeysayhi.github.io/2017/09/27/%E9%9D%A2%E8%AF%95%E4%B8%AD%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F%E6%9C%89%E5%87%A0%E7%A7%8D%E5%86%99%E6%B3%95%EF%BC%9F/) :star::star::star::star:
 
